--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
     <title>Backbone Example</title>
   </head>
   <body>
-  
+      <main>
+        <section data-jos-role="steps">
+          <div data-jos-role="step">
+            <fieldset id="f_metal_choicev0002">
+            </fieldset>
+            <fieldset id="f_pendant_engravings94v0001">
+            </fieldset>            
+          </div>
+
+        </section>
+
+      </main>
   </body>
   <script src="./js/main.js"></script>
 </html>
